添加首页 登录页 及列表页

--- a/wisdomCampus/manifest.json
+++ b/wisdomCampus/manifest.json
@@ -10,7 +10,7 @@
     "icons": {
         "72": "icon.png"
     },
-    "launch_path": "index.html",/*应用的入口页面，默认为根目录下的index.html；支持网络地址，必须以http://或https://开头*/
+    "launch_path": "html/home.html",/*应用的入口页面，默认为根目录下的index.html；支持网络地址，必须以http://或https://开头*/
     "developer": {
         "name": "",/*开发者名称*/
         "email": "",/*开发者邮箱地址*/
@@ -199,5 +199,241 @@
                 }
             }
         }
-    }
+    },
+	"dependencies": {
+		"pages": {
+			"html/home.html": {
+				"resources": [],
+				"refer": [
+					"html/all.html"
+				],
+				"priority": 0
+			},
+			"html/all.html": {
+				"resources": [],
+				"refer": [
+					"html/home.html"
+				],
+				"priority": 0
+			}
+		},
+		"idle": {
+			"resources": [
+				"img/firstPage/u298.png",
+				"js/lib/crypto-js/sha3.js",
+				"js/utils/cryption.js",
+				"js/utils/events.js",
+				"js/lib/crypto-js/core.js",
+				"js/pcWeb-HUI/process/leave-setting.js",
+				"js/multiple/jquery.min.js",
+				"js/lib/crypto-js/sha224.js",
+				"js/pcWeb-HUI/process/checkPerson-list.js",
+				"js/lib/crypto-js/hmac-sha3.js",
+				"js/vue-router.js",
+				"js/lib/crypto-js/rabbit.js",
+				"js/utils/mui.pullToRefresh.js",
+				"js/lib/crypto-js/README.md",
+				"js/lib/crypto-js/hmac-ripemd160.js",
+				"fonts/mui.ttf",
+				"js/lib/crypto-js/x64-core.js",
+				"js/lib/RSA/Barrett.js",
+				"js/demoCssJs/city-picker.min.js",
+				"js/lib/RSA/MD5.js",
+				"js/lib/crypto-js/cipher-core.js",
+				"js/utils/mui.pullToRefresh.material.js",
+				"js/demoCssJs/select.js",
+				"js/demoCssJs/demos.css",
+				"js/lib/jquery.js",
+				"js/lib/crypto-js/ripemd160.js",
+				"css/swiper/swiper.css",
+				"js/lib/crypto-js/CONTRIBUTING.md",
+				"js/lib/crypto-js/index.js",
+				"js/demoCssJs/datetime-picker.js",
+				"js/lib/RSA/RSA.js",
+				"js/lib/crypto-js/pad-zeropadding.js",
+				"js/pcWeb-HUI/select-load-singPic.js",
+				"js/lib/crypto-js/hmac-sha512.js",
+				"js/appweb/select-choose.js",
+				"js/lib/jquery.lazyload.min.js",
+				"js/jquery-weui.min.js",
+				"js/CheckboxSelect.js",
+				"js/lib/swiper/swiper.js",
+				"js/lib/crypto-js/aes.js",
+				"js/pcWeb-HUI/Uploader.js",
+				"html/noticeDetails.html",
+				"js/lib/crypto-js/hmac-sha384.js",
+				"js/lib/crypto-js/hmac-md5.js",
+				"js/demoCssJs/iscroll.js",
+				"js/importJS.js",
+				"js/lib/crypto-js/mode-ecb.js",
+				"js/lib/crypto-js/bower.json",
+				"js/lib/crypto-js/require.js",
+				"js/lib/plupload/plupload.full.min.js",
+				"js/lib/WdatePicker.js",
+				"js/demoCssJs/infinite.js",
+				"js/demoCssJs/template7.js",
+				"js/lib/RSA/jsencrypt.js",
+				"css/demos.css",
+				"js/lib/crypto-js/enc-hex.js",
+				"js/iscroll.js",
+				"js/lib/crypto-js/pad-iso97971.js",
+				"js/demoCssJs/weui.css",
+				"js/appweb/subject_timetable.js",
+				"js/lib/crypto-js/docs/QuickStartGuide.wiki",
+				"js/lib/crypto-js/enc-base64.js",
+				"js/multiple/images/tree_icons.png",
+				"js/demoCssJs/jquery-weui.min.js",
+				"js/lib/crypto-js/hmac-sha1.js",
+				"js/vue-router.min.js",
+				"js/fastclick.js",
+				"js/lib/crypto-js/pbkdf2.js",
+				"img/firstPage/firstPage1.png",
+				"js/utils/sortSign.js",
+				"js/request.js",
+				"js/jweixin-1.2.0.js",
+				"js/lib/crypto-js/sha384.js",
+				"img/firstPage/firstPage2.png",
+				"js/demoCssJs/swiper.min.js",
+				"html/testPro.html",
+				"js/pcWeb-HUI/process/process-setting.js",
+				"html/login.html",
+				"js/demoCssJs/action.js",
+				"js/jquery-weui.js",
+				"js/lib/crypto-js/tripledes.js",
+				"js/weui.min.js",
+				"js/lib/crypto-js/format-openssl.js",
+				"js/multiple/jquery.easyui.min.js",
+				"js/jquery.min.js",
+				"js/lib/crypto-js/md5.js",
+				"img/firstPage/firstPage3.png",
+				"js/compress.js",
+				"js/lib/crypto-js/format-hex.js",
+				"js/lib/crypto-js/hmac-sha224.js",
+				"js/lib/plupload/moxie.min.js",
+				"js/pcWeb-HUI/process/choose-checked-person.js",
+				"js/demoCssJs/toast.js",
+				"js/demoCssJs/toptip.js",
+				"js/lib/crypto-js/evpkdf.js",
+				"js/demoCssJs/photos.js",
+				"js/appweb/com-persen.js",
+				"js/appweb/choose-person.js",
+				"js/demoCssJs/notification.js",
+				"css/jquery-weui.min.css",
+				"css/swiper/swiper.min.css",
+				"js/demoCssJs/city-data.js",
+				"css/utils/pullToRefresh.css",
+				"js/demoCssJs/jquery-extend.js",
+				"js/lib/crypto-js/mode-ctr-gladman.js",
+				"js/lib/plupload/plupload.dev.js",
+				"js/utils/cloudutil.js",
+				"js/lib/qiniu/qiniu.min.js",
+				"js/demoCssJs/swiper-3.4.2.min.css",
+				"js/demoCssJs/photo-browser.js.bak",
+				"js/demoCssJs/jquery-weui.js",
+				"js/lib/crypto-js/mode-ofb.js",
+				"fonts/iconfont.ttf",
+				"css/utils/iconfont.css",
+				"js/utils/consts.js",
+				"css/jquery-weui.css",
+				"js/lib/crypto-js/enc-utf8.js",
+				"js/equipment-service/choose-depart.js",
+				"js/utils/request.js",
+				"js/demoCssJs/device.js",
+				"img/firstPage/firstPage0.png",
+				"js/multiple/images/combo_arrow.png",
+				"js/multiple/easyui.css",
+				"index.html",
+				"js/demoCssJs/album.js",
+				"js/lib/exif/exif.min.js",
+				"css/publish-answer.css",
+				"js/lib/RSA/jQuery.md5.js",
+				"js/demoCssJs/calendar.js",
+				"js/home.js",
+				"img/firstPage/firstPage4.png",
+				"js/lib/crypto-js/hmac.js",
+				"js/vue.min.js",
+				"js/lanren.js",
+				"js/Skin/islider.js",
+				"js/lib/crypto-js/sha1.js",
+				"js/mui.min.js",
+				"js/lib/crypto-js/sha256.js",
+				"js/appweb/com-publish.js",
+				"css/new-detail.css",
+				"js/utils/signHmacSHA1.js",
+				"js/pcWeb-HUI/process/select-person.js",
+				"js/lib/crypto-js/hmac-sha256.js",
+				"js/lib/crypto-js/mode-cfb.js",
+				"js/lib/crypto-js/pad-ansix923.js",
+				"js/appweb/choose-file.js",
+				"js/demoCssJs/jquery-weui.css",
+				"js/jweixin.js",
+				"js/appweb/extra-publish.js",
+				"js/lib/crypto-js/enc-utf16.js",
+				"js/lib/crypto-js/pad-nopadding.js",
+				"js/demoCssJs/picker.js",
+				"js/lib/qiniu/qiniu.js",
+				"css/mui.min.css",
+				"js/lib/crypto-js/rabbit-legacy.js",
+				"js/demoCssJs/pull-to-refresh.js",
+				"css/weui.css",
+				"js/lib/crypto-js/sha512.js",
+				"js/lib/qiniu/dist/qiniu.min.map",
+				"img/firstPage/u296.png",
+				"js/equipment-service/classify-list.js",
+				"js/demoCssJs/swiper.jquery.js",
+				"css/weui.min.css",
+				"img/firstPage/firstPage5.png",
+				"js/demoCssJs/slider.js",
+				"js/lib/crypto-js/enc-latin1.js",
+				"js/utils/storageutil.js",
+				"js/demoCssJs/vue.min.js",
+				"js/demoCssJs/zepto.js",
+				"js/utils/wx-utils.js",
+				"js/demoCssJs/swiper.js",
+				"js/Skin/plugins/islider_desktop.js",
+				"js/lib/RSA/BigInt.js",
+				"img/firstPage/u292.png",
+				"js/lib/plupload/plupload.min.js",
+				"js/lib/plupload/moxie.js",
+				"js/demoCssJs/jquery-2.1.4.js",
+				"js/lib/plupload/Moxie.swf",
+				"js/demoCssJs/modal.js",
+				"js/equipment-service/choose-person.js",
+				"js/lib/crypto-js/lib-typedarrays.js",
+				"js/demoCssJs/swiper-wrap.js",
+				"js/equipment-service/treeNode.js",
+				"js/demoCssJs/fastclick.js",
+				"js/lib/crypto-js/pad-iso10126.js",
+				"js/demoCssJs/city-picker.js",
+				"js/demoCssJs/jquery-weui.min.css",
+				"js/demoCssJs/popup.js",
+				"js/lib/vconsole/vconsole.min.js",
+				"js/lib/swiper/swiper.min.js",
+				"js/lib/crypto-js/pad-pkcs7.js",
+				"js/lib/crypto-js/crypto-js.js",
+				"js/lib/crypto-js/LICENSE",
+				"js/vue.js",
+				"js/demoCssJs/tab.js",
+				"js/utils/compress.js",
+				"js/utils/pluploadutil.js",
+				"js/equipment-service/chose-multiPerson.js",
+				"css/Skin/zzsc.css",
+				"js/lib/crypto-js/rc4.js",
+				"js/demoCssJs/hammer.js",
+				"js/utils/utils.js",
+				"js/demoCssJs/swipeout.js",
+				"css/style.css",
+				"js/appweb/choose-singlePerson.js",
+				"js/lib/crypto-js/package.json",
+				"img/firstPage/firstPage7.png",
+				"js/publicProtocol.js",
+				"js/appweb/load.js",
+				"js/demoCssJs/search-bar.js",
+				"img/firstPage/firstPage6.png",
+				"js/lib/crypto-js/mode-ctr.js",
+				"js/demoCssJs/weui.min.css",
+				"js/demoCssJs/city-data.js.bak"
+			]
+		}
+	}
 }
