--- a/wisdomCampus/manifest.json
+++ b/wisdomCampus/manifest.json
@@ -1,4 +1,4 @@
-﻿{
+{
     "@platforms": ["android", "iPhone", "iPad"],
     "id": "H5B104CAC",/*应用的标识，创建应用时自动生成，勿手动修改*/
     "name": "wisdomCampus",/*应用名称，程序桌面图标名称*/
@@ -10,7 +10,7 @@
     "icons": {
         "72": "icon.png"
     },
-    "launch_path": "html/login.html",/*应用的入口页面，默认为根目录下的index.html；支持网络地址，必须以http://或https://开头*/
+    "launch_path": "html/all.html",/*应用的入口页面，默认为根目录下的index.html；支持网络地址，必须以http://或https://开头*/
     "developer": {
         "name": "",/*开发者名称*/
         "email": "",/*开发者邮箱地址*/
@@ -212,7 +212,15 @@
 			"html/all.html": {
 				"resources": [],
 				"refer": [
-					"html/home.html"
+					"html/home.html",
+					"html/new_message.html"
+				],
+				"priority": 0
+			},
+			"html/new_message.html": {
+				"resources": [],
+				"refer": [
+					"html/all.html"
 				],
 				"priority": 0
 			}
