--- a/wisdomCampus/manifest.json
+++ b/wisdomCampus/manifest.json
@@ -223,6 +223,13 @@
 					"html/all.html"
 				],
 				"priority": 0
+			},
+			"html/login.html": {
+				"resources": [],
+				"refer": [
+					"html/home.html"
+				],
+				"priority": 0
 			}
 		},
 		"idle": {
@@ -304,7 +311,6 @@
 				"js/demoCssJs/swiper.min.js",
 				"html/testPro.html",
 				"js/pcWeb-HUI/process/process-setting.js",
-				"html/login.html",
 				"js/demoCssJs/action.js",
 				"js/jquery-weui.js",
 				"js/lib/crypto-js/tripledes.js",
