--- a/wisdomCampus/manifest.json
+++ b/wisdomCampus/manifest.json
@@ -239,7 +239,8 @@
 			"html/new-check.html": {
 				"resources": [],
 				"refer": [
-					"html/all.html"
+					"html/all.html",
+					"html/selectPeople.html"
 				],
 				"priority": 0
 			},
@@ -260,7 +261,8 @@
 			"html/selectPeople.html": {
 				"resources": [],
 				"refer": [
-					"html/new_message.html"
+					"html/new_message.html",
+					"html/new-check.html"
 				],
 				"priority": 0
 			}
