修改列表界面

--- a/wisdomCampus/manifest.json
+++ b/wisdomCampus/manifest.json
@@ -273,7 +273,8 @@
 			"html/all-list.html": {
 				"resources": [],
 				"refer": [
-					"html/new_message.html"
+					"html/new_message.html",
+					"html/new-check.html"
 				],
 				"priority": 0
 			}
