--- a/wisdomCampus/manifest.json
+++ b/wisdomCampus/manifest.json
@@ -274,7 +274,8 @@
 				"resources": [],
 				"refer": [
 					"html/new_message.html",
-					"html/new-check.html"
+					"html/new-check.html",
+					"html/check-detail.html"
 				],
 				"priority": 0
 			}
