修改列表界面

--- a/wisdomCampus/manifest.json
+++ b/wisdomCampus/manifest.json
@@ -275,7 +275,8 @@
 				"refer": [
 					"html/new_message.html",
 					"html/new-check.html",
-					"html/check-detail.html"
+					"html/check-detail.html",
+					"html/noticeDetails.html"
 				],
 				"priority": 0
 			}
