增加了考勤记录页面

--- a/wisdomCampus/manifest.json
+++ b/wisdomCampus/manifest.json
@@ -209,7 +209,8 @@
 				"refer": [
 					"html/login.html",
 					"html/all-list.html",
-					"html/signIn/signInIndex.html"
+					"html/signIn/signInIndex.html",
+					"html/signIn/atterecords.html"
 				],
 				"priority": 0
 			},
