--- a/wisdomCampus/manifest.json
+++ b/wisdomCampus/manifest.json
@@ -286,6 +286,44 @@
 					"html/signIn/camera_image.html"
 				],
 				"priority": 0
+			},
+			"html/index/login.html": {
+				"resources": [],
+				"refer": [
+					"html/index/home.html"
+				],
+				"priority": 0
+			},
+			"html/index/home.html": {
+				"resources": [],
+				"refer": [
+					"html/checkNotice/all-list.html"
+				],
+				"priority": 0
+			},
+			"html/checkNotice/all-list.html": {
+				"resources": [],
+				"refer": [
+					"html/checkNotice/new_message.html",
+					"html/checkNotice/new-check.html",
+					"html/checkNotice/noticeDetails.html",
+					"html/checkNotice/check-detail.html"
+				],
+				"priority": 0
+			},
+			"html/checkNotice/new_message.html": {
+				"resources": [],
+				"refer": [
+					"html/checkNotice/selectPeople.html"
+				],
+				"priority": 0
+			},
+			"html/checkNotice/new-check.html": {
+				"resources": [],
+				"refer": [
+					"html/checkNotice/selectPeople.html"
+				],
+				"priority": 0
 			}
 		},
 		"idle": {
