--- a/wisdomCampus/manifest.json
+++ b/wisdomCampus/manifest.json
@@ -297,7 +297,8 @@
 			"html/index/home.html": {
 				"resources": [],
 				"refer": [
-					"html/checkNotice/all-list.html"
+					"html/checkNotice/all-list.html",
+					"html/signIn/atterecords.html"
 				],
 				"priority": 0
 			},
