--- a/wisdomCampus/manifest.json
+++ b/wisdomCampus/manifest.json
@@ -299,7 +299,8 @@
 				"refer": [
 					"html/checkNotice/all-list.html",
 					"html/signIn/atterecords.html",
-					"html/signIn/signInIndex.html"
+					"html/signIn/signInIndex.html",
+					"html/signIn/signInIndex1.html"
 				],
 				"priority": 0
 			},
@@ -324,6 +325,13 @@
 				"resources": [],
 				"refer": [
 					"html/checkNotice/selectPeople.html"
+				],
+				"priority": 0
+			},
+			"html/signIn/signInIndex1.html": {
+				"resources": [],
+				"refer": [
+					"html/signIn/atterecords.html"
 				],
 				"priority": 0
 			}
