--- a/wisdomCampus/manifest.json
+++ b/wisdomCampus/manifest.json
@@ -295,7 +295,9 @@
 				"priority": 0
 			},
 			"html/index/home.html": {
-				"resources": [],
+				"resources": [
+					"js/lib/app-update.js"
+				],
 				"refer": [
 					"html/checkNotice/all-list.html",
 					"html/signIn/atterecords.html",
@@ -305,7 +307,8 @@
 					"html/mine/modifyPassword.html",
 					"html/mine/about.html",
 					"html/mine/redirectPassword.html",
-					"html/mine/headImg.html"
+					"html/mine/headImg.html",
+					"html/index/test.html"
 				],
 				"priority": 0
 			},
