--- a/wisdomCampus/manifest.json
+++ b/wisdomCampus/manifest.json
@@ -171,11 +171,11 @@
                 "ios": {
                     "iphone": {
                         "default": "", /*iPhone3启动图片选，分辨率：320x480*/
-                        "retina35": "/Users/a111/Downloads/智慧校园启动页iOS/640960.png",/*3.5英寸设备(iPhone4)启动图片，分辨率：640x960*/
-                        "retina40": "/Users/a111/Downloads/智慧校园启动页iOS/6401136.png",/*4.0 英寸设备(iPhone5/iPhone5s)启动图片，分辨率：640x1136*/
-                        "retina47": "/Users/a111/Downloads/智慧校园启动页iOS/7501334.png",/*4.7 英寸设备(iPhone6)启动图片，分辨率：750x1334*/
-                        "retina55": "/Users/a111/Downloads/智慧校园启动页iOS/12422208.png",/*5.5 英寸设备(iPhone6 Plus)启动图片，分辨率：1242x2208*/
-                        "retina55l": "","iphonex":"/Users/a111/Downloads/智慧校园启动页iOS/11252436.png"/*5.5 英寸设备(iPhone6 Plus)横屏启动图片，分辨率：2208x1242*/
+                        "retina35": "/Users/jinshiye/Downloads/downfiles/智慧校园启动页/640960.png",/*3.5英寸设备(iPhone4)启动图片，分辨率：640x960*/
+                        "retina40": "/Users/jinshiye/Downloads/downfiles/智慧校园启动页/6401136.png",/*4.0 英寸设备(iPhone5/iPhone5s)启动图片，分辨率：640x1136*/
+                        "retina47": "/Users/jinshiye/Downloads/downfiles/智慧校园启动页/7501334.png",/*4.7 英寸设备(iPhone6)启动图片，分辨率：750x1334*/
+                        "retina55": "/Users/jinshiye/Downloads/downfiles/智慧校园启动页/12422208.png",/*5.5 英寸设备(iPhone6 Plus)启动图片，分辨率：1242x2208*/
+                        "retina55l": "","iphonex":"/Users/jinshiye/Downloads/downfiles/智慧校园启动页/11252436.png"/*5.5 英寸设备(iPhone6 Plus)横屏启动图片，分辨率：2208x1242*/
                     },
                     "ipad": {
                         "portrait": "", /*iPad竖屏启动图片，分辨率：768x1004*/
@@ -191,9 +191,9 @@
                 "android": {
                     "mdpi": "", /*普通屏启动图片，分辨率：240x282*/
                     "ldpi": "", /*大屏启动图片，分辨率：320x442*/
-                    "hdpi": "/Users/a111/Downloads/智慧校园启动页/480 762.png", /*高分屏启动图片，分辨率：480x762*/
-                    "xhdpi": "/Users/a111/Downloads/智慧校园启动页/720 1242.png", /*720P高分屏启动图片，分辨率：720x1242*/
-                    "xxhdpi": "/Users/a111/Downloads/智慧校园启动页/1080 1882.png"/*1080P高分屏启动图片，分辨率：1080x1882*/
+                    "hdpi": "/Users/jinshiye/Downloads/downfiles/智慧校园启动页/480 762.png", /*高分屏启动图片，分辨率：480x762*/
+                    "xhdpi": "/Users/jinshiye/Downloads/downfiles/智慧校园启动页/720 1242.png", /*720P高分屏启动图片，分辨率：720x1242*/
+                    "xxhdpi": "/Users/jinshiye/Downloads/downfiles/智慧校园启动页/1080 1882.png"/*1080P高分屏启动图片，分辨率：1080x1882*/
                 }
             }
         },"ads":{"rp":false,"splash":false,"push":false}
