修改学生管理bug

--- a/wisdomCampus/manifest.json
+++ b/wisdomCampus/manifest.json
@@ -430,6 +430,14 @@
 					"html/studentManage/student-attendance-count.html"
 				],
 				"priority": 0
+			},
+			"html/studentManage/student-action.html": {
+				"resources": [],
+				"refer": [
+					"html/studentManage/student-action-add.html",
+					"html/studentManage/student-actionDetail.html"
+				],
+				"priority": 0
 			}
 		},
 		"idle": {
